added auth with some nice styles

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="main-box">
         <div class="title-box">
-            <span id="f1t"> </span>
+            <span class="invitation-title" id="f1t"> </span>
             <br />
-            <span id="f2t"> </span>
+            <span class="guests-info" id="f2t"> </span>
         </div>
         <div class="img-box">
-            <img src="img/img2.jpg" alt="aproszenie na ślub Małgorzaty i Michała" class="img-img">
+            <img src="img/img2.jpg" alt="Zaproszenie" class="img-img">
         </div>
         <div class="title-bottom-box">
             <span id="f1tb"></span>
@@ -35,7 +35,7 @@
             </div>
             <div class="snaw">
                 <span class="min-title">Wesele</span><br />
-                <span>Nastalgia Sokolniki</span><br />
+                <span>Nostalgia Sokolniki</span><br />
                 <span>Sokolniki 34, Las Sokolniki</span>
             </div>
         </div>
@@ -46,7 +46,7 @@
             <br />
             <span>Małgorzata 517 961 292</span>
             <br /><br />
-            <span>Wpisz poniej swój adres email i potwierdź przyciskiem</span>
+            <span>Wpisz poniżej swój adres email i potwierdź przyciskiem</span>
             <br />
             <form action="">
                 <div style="display: flex; align-items: center; margin-top: 25px;">
