fixed bugs with create and update added new font added dynamic fetch

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -48,7 +48,7 @@
         <br/><br/>
         <span>Wpisz poniżej swój adres email i potwierdź przyciskiem</span>
         <br/>
-        <form action="">
+        <form class="update-additional-info" action="">
             <div style="display: flex; align-items: center; margin-top: 25px;">
                 <input type="checkbox" id="transport">
                 <label for="transport"> Transport Łódź-Sokolniki-Łódź</label>
