--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -15,7 +15,7 @@
         <br/>
         <span class="guests-info" id="f2t"> </span>
     </div>
-    <div class="img-box">
+    <div id="img-div-id" class="img-box">
         <img src="img/img2.jpg" alt="Zaproszenie" class="img-img">
     </div>
     <div class="title-bottom-box">
