play better front

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -13,10 +13,13 @@
     <div class="title-box">
         <span class="invitation-title" id="f1t"> </span>
         <br/>
+        <span class="guests-for" id="f1.5t"> </span>
+        <br/>
         <span class="guests-info" id="f2t"> </span>
     </div>
     <div id="img-div-id" class="img-box">
         <img src="img/img2.jpg" alt="Zaproszenie" class="img-img">
+        <img src="img/play.jpg" alt="Rozpocznij" class="play-img" id="play-img">
     </div>
     <div class="title-bottom-box">
         <span id="f1tb"></span>
@@ -33,7 +36,7 @@
             <span>Kościół pw. św. Antoniego z Padwy</span><br/>
             <span>Antoniego Padewskiego 4, Łódź</span>
         </div>
-        <div class="snaw">
+        <div class="snaw" id="reception">
             <span class="min-title">Wesele</span><br/>
             <span>Nostalgia Sokolniki</span><br/>
             <span>Sokolniki 34, Las Sokolniki</span>
@@ -46,7 +49,13 @@
         <br/>
         <span>Małgorzata 517 961 292</span>
         <br/><br/>
-        <span>Wpisz poniżej swój adres email i potwierdź przyciskiem</span>
+        <span>Zachęcamy wszystkich do podania adresu e-mail poniżej.</span>
+        <br/>
+        <span>Dzięki temu będziecie informowani o ewentualnych zmianach (na stronie pojawi się także</span>
+        <br/>
+        <span>plan sali z przydziałem miejsc przy stołach), a my dowiemy się</span>
+        <br/>
+        <span>kto jest zainteresowany dojazdem i noclegiem</span>
         <br/>
         <form class="update-additional-info" action="">
             <div style="display: flex; align-items: center; margin-top: 25px;">
