--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -80,6 +80,6 @@
 <!--        <source src="mp3/3.mp3" type="audio/mpeg">-->
 <!--    </audio>-->
 
-<script type="module" src="js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
