adding email edit support

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -59,18 +59,18 @@
         <br/>
         <form class="update-additional-info" action="">
             <div style="display: flex; align-items: center; margin-top: 25px;">
-                <input type="checkbox" id="transport">
+                <input type="checkbox" id="transport" name="Transport">
                 <label for="transport"> Transport Łódź-Sokolniki-Łódź</label>
             </div>
             <br/>
             <div style="display: flex; align-items: center;">
-                <input type="checkbox" id="nocleg">
+                <input type="checkbox" id="nocleg" name="Hotel">
                 <label for="transport"> Nocleg z 25 na 26 czerwca</label>
             </div>
             <br/>
-            <input type="text">
+            <input type="text" name="Email">
             <br/>
-            <button>Potwierdź</button>
+            <button type="submit" formmethod="post">Potwierdź</button>
         </form>
     </div>
 </div>
