fixed not displaying reception info

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -42,7 +42,7 @@
             <span>Sokolniki 34, Las Sokolniki</span>
         </div>
     </div>
-    <div class="reg-box">
+    <div id="reception-info" class="reg-box">
         <span>Prosimy o potwierdzenie przybycia do 11.06.2022</span>
         <br/>
         <span>Michał 697 648 102</span>
