added some nice stuff for the front page

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -70,7 +70,7 @@
             <br/>
             <input type="text" name="Email">
             <br/>
-            <button type="submit" formmethod="post">Potwierdź</button>
+            <button type="submit" formmethod="post">Dodaj e-mail i opcje</button>
         </form>
     </div>
 </div>
