--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/animate.css">
     <title>Zaproszenie</title>
 </head>
@@ -81,5 +82,6 @@
 <!--    </audio>-->
 
 <script src="js/script.js"></script>
+<script src="js/script2.js"></script>
 </body>
 </html>
