added table front

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/anim.css">
     <title>Zaproszenie</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
             <span>Sokolniki 34, Las Sokolniki</span>
         </div>
     </div>
-    <div id="reception-info" class="reg-box">
+    <div id="reception-info" class="reg-box" style="display: none">
         <span>Prosimy o potwierdzenie przybycia do 11.06.2022</span>
         <br/>
         <span>Michał 697 648 102</span>
