added tables info

--- a/front/Grootoony/index.html
+++ b/front/Grootoony/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id="img-div-id" class="img-box">
         <img src="img/img2.jpg" alt="Zaproszenie" id="img-div-btn" class="img-img">
-        <!--<img src="img/play.jpg" alt="Rozpocznij" class="play-img" id="play-img">-->
+        <img src="img/play.jpg" alt="Rozpocznij" class="play-img" id="play-img">
     </div>
     <div class="title-bottom-box">
         <span id="f1tb"></span>
