--- a/front/Grootoony/spis/index.html
+++ b/front/Grootoony/spis/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+    <div id="container1"></div>
+    <div id="container2"></div>
+    <div id="container3"></div>
     <script src="script.js"></script>
 
 </body>
